--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Edu</title>
+     <title>Teach Each</title>
 <!-- 
 
 
@@ -43,14 +43,18 @@ body {
 }
 
 .header {
-  padding: 30px 0;
-  font-size: 20px;
+  padding: 1px 0;
+  color: #29ca8e;
+  
+  font-size: 40px;
+  font-family: 'Courier New', Courier, monospace;
+  font: outline;
   text-align: center;
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid #29ca8e;
 }
 
 .main {
-  background: #fff;
+  background: #29ca8e;
 }
 
 .footer {
@@ -435,7 +439,7 @@ svg.svg-sofort {
                     </button>
 
                     <!-- lOGO TEXT -->
-                    <a href="#" class="navbar-brand">Online Classes</a>
+                    <a href="#" class="navbar-brand">Teach Each</a>
                </div>
 
                <!-- MENU LINKS -->
@@ -468,7 +472,7 @@ svg.svg-sofort {
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>Online Classes for best Student Teacher Interaction</h1>
-                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero.</h3>
+                                             <h3>“A man's mind, stretched by new ideas, may never return to its original dimensions.”</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
@@ -480,7 +484,7 @@ svg.svg-sofort {
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>Assignment and Project Help</h1>
-                                        <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero.</h3>
+                                        <h3>“A man's mind, stretched by new ideas, may never return to its original dimensions.”</h3>
                                              <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
                                         </div>
                                    </div>
@@ -492,7 +496,7 @@ svg.svg-sofort {
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>Efficient Learning Methods</h1>
-                                             <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
+                                             <h3>“A man's mind, stretched by new ideas, may never return to its original dimensions.”. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a>
                                         </div>
                                    </div>
@@ -844,9 +848,10 @@ svg.svg-sofort {
           </div>
      </section>   
      <!---------------------------------------------------------------->
-     <!----<section id="payments">
+     
+     <section id="payments">
      <div class='header'>
-          Payment Methods
+         <b> Payment Methods</b>
         </div>
         
         <div class="main">
